mvp/min_sidecar.yaml
admin:
  address:
    socket_address: { address: 127.0.0.1, port_value: 9902 }

static_resources:
  listeners:
  - name: listener_to_igw
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 10006
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: AUTO
          stat_prefix: ingress_https
          route_config:
            name: local_route_https
            virtual_hosts:
            - name: local_service_https
              domains: ["*"]
              routes:
                - match:
                    connect_matcher:
                      {}
                  route:
                    cluster: igwhttps
                    upgrade_configs:
                      - upgrade_type: CONNECT
                        connect_config:
                          {}
                - match: { prefix: "/" }
                  route: { cluster: igwhttps }
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
  - name: igwhttps
    connect_timeout: 5s
    type: STATIC
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: igw
      endpoints:
        - lb_endpoints:
          - endpoint:
              address:
                socket_address:
                  address: 127.0.0.1 
                  port_value: 8183
